[gd_scene load_steps=10 format=4 uid="uid://cgoqc4yr0vreo"]

[ext_resource type="Script" uid="uid://cgw0qb81al3yp" path="res://MainMenu/MainMenu.gd" id="1_vlt7k"]
[ext_resource type="TileSet" uid="uid://4sb04ju368vy" path="res://Textures/Mapped.tres" id="2_fe2nu"]
[ext_resource type="Texture2D" uid="uid://ywuhwaxl6fwd" path="res://Textures/Logo/Coa_Illustration_Cross_Triquetra.svg.png" id="3_gf3kb"]
[ext_resource type="AudioStream" uid="uid://c5ekwy4jpoktk" path="res://Songs/medieval.mp3" id="4_ebxsd"]
[ext_resource type="Texture2D" uid="uid://dokt5n55xcm4r" path="res://Textures/Tilesets/UI/Buttons/start_standard.png" id="5_swrsw"]
[ext_resource type="Texture2D" uid="uid://co4jdbvsnkna2" path="res://Textures/Tilesets/UI/Buttons/start_hover.png" id="6_1j45m"]
[ext_resource type="Texture2D" uid="uid://brbo26ggcp5hm" path="res://Textures/Tilesets/UI/Buttons/quit_standard.png" id="7_ma5tf"]
[ext_resource type="Texture2D" uid="uid://7k65ctxlblg1" path="res://Textures/Tilesets/UI/Buttons/quit_hover.png" id="8_8wuo3"]
[ext_resource type="PackedScene" uid="uid://lpc7qc7njvib" path="res://Scenes/fade.tscn" id="9_d32n2"]

[node name="TEST_MainMenu" type="Node2D"]
script = ExtResource("1_vlt7k")

[node name="ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAEAAMAAAAGAAIAAAADAAQAAAAGAAMAAAABAAQAAAAHAAMAAAAAAAAAAAAIAAMAAAAEAAMAAAAIAAIAAAABAAUAAAAHAAIAAAAGAAQAAAAFAAEAAAAAAAAAAAAGAAEAAAACAAMAAAAHAAEAAAAAAAAAAAAIAAEAAAAEAAIAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAACAAMAAAAFAAQAAAABAAUAAAAGAAQAAAAFAAMAAAAHAAQAAAAAAAAAAAAIAAQAAAABAAUAAAAJAAIAAAACAAIAAAAJAAEAAAADAAMAAAAJAAAAAAAAAAAAAAAIAAAAAAAFAAYAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAADAAAAAAAEAAAAAAACAAAAAAADAAAAAAABAAMAAAACAAAAAAADAAEAAAABAAAAAAABAAMAAAAAAAAAAAAAAAAAAAAAAAEAAAACAAAAAAABAAEAAAAAAAAAAAACAAEAAAADAAIAAAADAAEAAAABAAIAAAAJAAMAAAABAAMAAAAJAAQAAAABAAIAAAAIAAUAAAAAAAAAAAAHAAUAAAAGAAQAAAAGAAUAAAABAAMAAAAFAAUAAAAFAAMAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAQAAAADAAAAAAAAAAMAAAACAAIAAAAAAAIAAAADAAAAAAABAAMAAAAFAAIAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAACAAIAAAADAAMAAAAAAAAAAAACAAQAAAAAAAAAAAABAAIAAAAAAAAAAAADAAQAAAAAAAAAAAABAAQAAAAGAAEAAAAAAAUAAAAEAAEAAAAJAAUAAAAHAAUAAAA=")
tile_set = ExtResource("2_fe2nu")

[node name="props" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAMAAwADAAYAAAAJAAAAAQAFAA8AAAA=")
tile_set = ExtResource("2_fe2nu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAQAAgAFAAkAAAAEAAUAAgAIAAsAAAAEAAQAAgAIAAoAAAAEAAMAAgAIAAkAAAAEAAIAAgAIAAsAAAAEAAEABAABAAEAAAAFAAEABAACAAEAAAAJAAEABAACAAEAAAAIAAAABAADAAIAAAAGAAAABAABAAIAAAAIAAEABAAEAAQAAAAGAAEABAAIAAQAAAA=")
tile_set = ExtResource("2_fe2nu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(53, 47)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_gf3kb")

[node name="Medieval" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ebxsd")
volume_db = -14.034
autoplay = true
parameters/looping = true

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 167.0
offset_top = 67.0
offset_right = 293.0
offset_bottom = 115.0
texture_normal = ExtResource("5_swrsw")
texture_hover = ExtResource("6_1j45m")

[node name="Quit" type="TextureButton" parent="Button_Manager"]
layout_mode = 0
offset_left = 166.0
offset_top = 125.0
offset_right = 292.0
offset_bottom = 173.0
texture_normal = ExtResource("7_ma5tf")
texture_hover = ExtResource("8_8wuo3")

[node name="Fade_Transition" parent="." instance=ExtResource("9_d32n2")]
visible = false

[node name="FadeTimer" type="Timer" parent="Fade_Transition"]

[connection signal="pressed" from="Button_Manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_Manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Fade_Transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
